updating who's who order, spacing issues, adding pdf download

--- a/sites/mobile-first/css/ww_cci-casestudies.css
+++ b/sites/mobile-first/css/ww_cci-casestudies.css
@@ -969,7 +969,7 @@ p.quote{
 .videoContent {
     position: relative;
 	padding-bottom: 56.25%;
-	padding-top: 30px; 
+	margin-top: 40px; 
 	height: 0; 
 	overflow: hidden;
 }
